plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.11'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.finders'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ========================================
    // Spring Boot Starters
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // ========================================
    // Security & OAuth2
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    testImplementation 'org.springframework.security:spring-security-test'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // ========================================
    // Database
    // ========================================
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'  // 로컬/테스트용

    // ========================================
    // QueryDSL
    // ========================================
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // ========================================
    // API Documentation (Swagger)
    // ========================================
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // ========================================
    // Google Cloud Platform
    // ========================================
    implementation platform('com.google.cloud:libraries-bom:26.51.0')
    implementation 'com.google.cloud:google-cloud-storage'

    // ========================================
    // Sentry (Error Monitoring)
    // ========================================
    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:8.28.0'

    // ========================================
    // WebClient (Replicate API)
    // ========================================
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // ========================================
    // PortOne V2 (결제 연동) - REST API 사용
    // ========================================
    // WebClient는 spring-boot-starter-webflux에서 제공

    // ========================================
    // Utility
    // ========================================
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ========================================
    // Environment (.env 파일 로드 - 로컬 개발용)
    // ========================================
    developmentOnly 'me.paulschwarz:springboot3-dotenv:5.1.0'

    // ========================================
    // Test
    // ========================================
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // ========================================
    // Fixture Monkey (Mock 데이터 자동 생성)
    // ========================================
    // dev 환경에서 Mock 데이터 생성용 (런타임에서도 사용)
    implementation 'com.navercorp.fixturemonkey:fixture-monkey-starter:1.1.11'
    implementation 'com.navercorp.fixturemonkey:fixture-monkey-jakarta-validation:1.1.11'

    // DataFaker (실제 같은 데이터 생성)
    implementation 'net.datafaker:datafaker:2.4.2'

    // Sendon (카카오톡 알림톡 대행사)
    implementation 'io.sendon:sendon-sdk-java:1.0.4'
}

// ========================================
// QueryDSL 설정
// ========================================
def querydslDir = layout.buildDirectory.dir("generated/querydsl").get().asFile

sourceSets {
    main.java.srcDirs += [querydslDir]
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(querydslDir)
}

clean.doLast {
    file(querydslDir).deleteDir()
}

// ========================================
// Test 설정
// ========================================
tasks.named('test') {
    useJUnitPlatform()
}

jar {
    enabled = false
}

bootJar {
    enabled = true
}

springBoot {
    buildInfo()
}